--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,7 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --warning: 56 100% 50%;
+    --success: 142 71% 45%;
   }
 
   .dark {
@@ -60,6 +61,7 @@
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
     --warning: 56 100% 50%;
+    --success: 142 71% 45%;
   }
 }
 
